[gd_scene load_steps=8 format=3 uid="uid://ck0y1md12vgj0"]

[ext_resource type="Script" path="res://Characters/CrownCrab/CrownCrab.gd" id="1_jyo78"]
[ext_resource type="PackedScene" uid="uid://d2if17n24siwf" path="res://Characters/EnemyHealthBar/EnemyHealthBar.tscn" id="2_6augl"]
[ext_resource type="Texture2D" uid="uid://bxl33vkk7k3s4" path="res://Characters/CrownCrab/Sprite1.PNG" id="2_wvoe0"]
[ext_resource type="Texture2D" uid="uid://2qjhuq54kx4l" path="res://Characters/CrownCrab/Sprite2.PNG" id="3_g3p7g"]
[ext_resource type="Shape2D" uid="uid://bj5jidcxj1s6n" path="res://Characters/CrownCrab/CrownCrabCollisionShape.res" id="4_17716"]

[sub_resource type="SpriteFrames" id="SpriteFrames_viq0y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_wvoe0")
}, {
"duration": 1.0,
"texture": ExtResource("3_g3p7g")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_syhv0"]
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(1, 0.541241, 0.47676, 1, 0.877346, 3.87453e-06, 1.2514e-06, 1, 0, 0, 0, 1)

[node name="WanderingEnemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 9
script = ExtResource("1_jyo78")

[node name="EnemyHealthBar" parent="." instance=ExtResource("2_6augl")]
position = Vector2(0, -30)
scale = Vector2(0.08, 0.08)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
scale = Vector2(0.1, 0.1)
sprite_frames = SubResource("SpriteFrames_viq0y")
autoplay = "default"
frame = 1
frame_progress = 0.735729
offset = Vector2(0, 100)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -1.5708
shape = ExtResource("4_17716")
metadata/_edit_lock_ = true

[node name="HitDetectionArea2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitDetectionArea2D"]
rotation = 1.5708
shape = ExtResource("4_17716")

[node name="HitParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 20
lifetime = 0.1
one_shot = true
emission_shape = 1
emission_sphere_radius = 20.0
direction = Vector2(0, 0)
spread = 0.0
gravity = Vector2(0, 100)
radial_accel_min = 5000.0
radial_accel_max = 5000.0
scale_amount_min = 2.0
scale_amount_max = 3.0
color_ramp = SubResource("Gradient_syhv0")

[node name="InvincibilityTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="area_entered" from="HitDetectionArea2D" to="." method="_on_hit_detection_area_2d_area_entered"]
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_invincibility_timer_timeout"]
